--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,6 @@
   <packaging>pom</packaging>
   <version>0.1.0-SNAPSHOT</version>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.eclipse.lsp4j</groupId>
-      <artifactId>org.eclipse.lsp4j</artifactId>
-      <version>0.12.0</version>
-    </dependency>
-  </dependencies>
-
-
   <modules>
     <module>langserver</module>
     <module>launcher</module>
@@ -27,12 +18,20 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <release>11</release>
           </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
   </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.eclipse.lsp4j</groupId>
+      <artifactId>org.eclipse.lsp4j</artifactId>
+      <version>0.12.0</version>
+    </dependency>
+  </dependencies>
 </project>
